--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.mining.mining"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -75,6 +75,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
 
+    //logging
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
     //rx
     implementation "io.reactivex.rxjava2:rxjava:2.1.16"
     implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
@@ -87,5 +90,9 @@ dependencies {
 
     //scarlet
     implementation 'com.github.tinder.scarlet:scarlet:0.1.4'
+    implementation 'com.github.tinder.scarlet:scarlet-websocket-okhttp:0.1.4'
+    implementation 'com.github.tinder.scarlet:scarlet-lifecycle-android:0.1.4'
+    implementation 'com.github.tinder.scarlet:scarlet-message-adapter-gson:0.1.4'
+    implementation 'com.github.tinder.scarlet:scarlet-stream-adapter-rxjava2:0.1.4'
 
 }
